--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Asem.png" alt="profile photo"></td>
+      <td><img src="Asem.png" alt="profile photo"></td>
       <td>
         <h1><strong>Asem Arab</strong></h1>
         <p>Founder of <a href="https://www.shutterstock.com/g/ebtikar"><em><strong>Ebtikar-Studios</strong></em></a></p>
