--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1><strong>Asem Arab</strong></h1>
         <p>Founder of <a href="https://www.shutterstock.com/g/ebtikar"><em><strong>Ebtikar-Studios</strong></em></a></p>
-        <p>I’m an HTML programmer and business developer</p>
+        <p>I’m an HTML developer and on my way to become a front end developer</p>
       </td>
     </tr>
   </table>
